classDiagram
direction LR

class Employee {
  <<interface>>
  +accept(visitor: DepartmentVisitor) void
  +getName() String
  +getWorkHours() double
}

class FullTimeEmployee {
  -String name
  -String department
  -String level
  -double weeklyBaseSalary
  -double workHours
  +FullTimeEmployee(...)
  +accept(visitor: DepartmentVisitor) void
  +getOvertimeHours() double
  +getLeaveHours() double
}

class TemporaryEmployee {
  -String name
  -String position
  -double hourlyWage
  -double workHours
  +TemporaryEmployee(...)
  +accept(visitor: DepartmentVisitor) void
  +getHourlyWage() double
}

class DepartmentVisitor {
  <<interface>>
  +visit(employee: FullTimeEmployee) void
  +visit(employee: TemporaryEmployee) void
  +getReport() String
}

class HRDepartmentVisitor {
  -double totalWorkHours
  -StringBuilder reportBuilder
  +visit(employee: FullTimeEmployee) void
  +visit(employee: TemporaryEmployee) void
  +getReport() String
}

class FinanceDepartmentVisitor {
  -double totalSalary
  -StringBuilder reportBuilder
  +visit(employee: FullTimeEmployee) void
  +visit(employee: TemporaryEmployee) void
  +getReport() String
}

class EmployeeList {
  -List~Employee~ employees
  +addEmployee(employee: Employee) void
  +removeEmployee(employee: Employee) void
  +accept(visitor: DepartmentVisitor) void
}

class VisitorDemo {
  +run() void
}

Employee <|.. FullTimeEmployee
Employee <|.. TemporaryEmployee
DepartmentVisitor <|.. HRDepartmentVisitor
DepartmentVisitor <|.. FinanceDepartmentVisitor
EmployeeList o-- "0..*" Employee
FullTimeEmployee ..> DepartmentVisitor : accept
TemporaryEmployee ..> DepartmentVisitor : accept
EmployeeList ..> DepartmentVisitor
VisitorDemo ..> EmployeeList
VisitorDemo ..> HRDepartmentVisitor
VisitorDemo ..> FinanceDepartmentVisitor
